<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:minWidth="100dp"
    >
        <ImageView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:src="@drawable/elgin_png"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
    >
        <RelativeLayout
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
        >
            <Button
                android:id="@+id/buttonPrinterOption"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/printer"
                android:text="@string/text_button_printer"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
            />

            <Button
                android:id="@+id/buttonBarCodeReaderOption"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/bar_code"
                android:text="@string/text_button_barCode"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
            />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginVertical="10dp"
        >
            <Button
                android:id="@+id/buttonTefOption"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/tef"
                android:text="@string/text_button_tef"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                 android:layout_centerVertical="true"
            />

            <Button
                android:id="@+id/button_sat"
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:background="@drawable/box"
                android:drawableTop="@drawable/sat"
                android:text="@string/text_button_sat"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:paddingTop="20dp"
                android:gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_footer_java_android_1_0_0"
            android:textColor="#7F7F7F"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp" />
    </RelativeLayout>
</LinearLayout>